--- a/templates/courses-2/courses.html
+++ b/templates/courses-2/courses.html
@@ -33,15 +33,6 @@
         <div class="col">
           <label for="validationCustom01"><strong>Select Class <span class="red">*</span></strong></label>
 
-
-          <!-- <select id="class_select" name="forclass" style="width: 100%;" class="js-example-basic-single form-control"
-            onchange="selectclass()">
-            <option class="form-control" selected disabled value="">Select Class</option>
-            {% for i in classes %}
-            <option class="form-control form-control-lg" value="{{ i.0 }}">{{i.0}} </option>
-            {% endfor %}
-          </select> -->
-
           <select id="class_select" name="forclass" class="js-example-basic-single form-control"
             placeholder="Select class" onchange="addoptions(this)">
             <option class="form-control" selected disabled value="">No selection</option>
@@ -67,6 +58,134 @@
         <button type="submit" class="btn btn-primary"> Add </button>
       </div>
     </form>
+  </div>
+  <br>
+
+
+  <div class="card mb-4">
+    <div class="card-header">
+      <!-- Grid row -->
+      <div class="row">
+        <!-- Grid column -->
+        <div class="col-md-8">
+          <h2 style="color: rgb(0, 0, 0 );">List of Courses</h2>
+        </div>
+
+        <div class="col-md-4">
+          <input id="searchbox" type="text" class="form-control" name='srh' placeholder="Search Exam or Course"
+            required>
+        </div>
+
+        <!-- Grid column -->
+      </div>
+    </div>
+    {% if course %}
+    <div class="card-body">
+      <!-- Grid row -->
+      <!-- <form action="" method="post">{% csrf_token %} -->
+      <!--Table-->
+      <div class="table-responsive">
+        <table class="table table-striped">
+          <!--Table head-->
+          <tr>
+            <th class="">Sr no</th>
+            <th class="">CLASS</th>
+            <th class="">COURSE NAME</th>
+
+            <th class="text-center">Action</th>
+            <!-- <th class="text-center" colspan="2">Action</th> -->
+          </tr>
+          <!--Table head-->
+          <!--Table body-->
+          {% for i in course %}
+          <tr id="{{ i.pk }}">
+            <td>{{ forloop.counter }}</td>
+            <td>{{i.forclass}}</td>
+            <td>{{i.courseName}}</td>
+            <td class="text-center">
+              <a class="btn btn-warning" href="{% url 'editCourse' i.id %}"><i class="flaticon-pencil-line"
+                  style="font-size:medium;"></i></a>
+              <a class="btn btn-danger" href="{% url 'deleteCourse' i.id %}"><i class="flaticon-delete-fill"
+                  style="font-size:medium;"></i></a>
+              <a class="popup-with-form" href="{% url 'courseArchivefirst' i.id %}"><i class="flaticon-file-upload-line  bg-primary p-1 text-white br-6 mb-3"
+                  style="font-size:medium;"></i></a>
+            </td>
+            <td class="text-center">
+
+            </td>
+
+            <td>
+
+
+
+
+
+              <!-- <div class="btn-group">
+                  <button type="button" data-toggle="modal" data-target="#edit-{{i.pk}}" href="#edit-{{i.pk}}"
+                    class="btn btn-secondary btn-sm"><i
+                      class="flaticon-edit  bg-success p-1 text-white br-6 mb-1"></i>Edit</button>
+                  <button type="button" class="btn btn-secondary btn-sm dropdown-toggle dropdown-toggle-split"
+                    id="dropdownMenuReference1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                    data-reference="parent">
+                    <span class="sr-only">Toggle Dropdown</span>
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenuReference1">
+                    <button class="btn btn-secondary btn-sm dropdown-item" data-toggle="modal"
+                      data-target="#delete-{{i.pk}}" href="#delete-{{i.pk}}" title="Delete"><i
+                        class="flaticon-delete  bg-danger p-1 text-white br-6 mb-1"></i>Delete</button>
+                
+                    <button class="btn btn-warning btn-sm dropdown-item" data-toggle="modal" name="undo"
+                      data-target="#archive-{{i.pk}}" href="#archive-{{i.pk}}" title="Archive"><i
+                        class="flaticon-delete  bg-warning p-1 text-white br-6 mb-1"></i>Archive</button>
+
+                  </div>
+                </div> -->
+            </td>
+          </tr>
+
+
+
+
+          <!-- <tr class="main-row">
+              <td>{{i.Name}}</td>
+              <td>{{i.course.courseName}}</td>
+              <td>{{i.Batch}}</td>
+              <td>{{i.exam_date}}</td>
+              <td>{{i.exam_duration}}</td>
+              <td>{{i.question_count}}</td>
+              <td>{{i.pass_percentage}}</td>
+              {% if i.status %}
+              <td class="text-center"><a href="{% url 'toggle' i.id %}" class="btn btn-danger p-1">Deactivate</a></td>
+              {% else %}
+              <td class="text-center"><a href="{% url 'toggle' i.id %}" class="btn btn-primary p-1">Activate</a></td>
+              {% endif %}
+              <td class="text-center">
+                <a class="btn btn-warning" href="{% url 'EditExam' i.id %}"><i class="flaticon-pencil-line"
+                    style="font-size:medium;"></i></a>
+              </td>
+              <td class="text-center">
+                <a class="btn btn-danger" href="{% url 'DeleteExam' i.id %}"><i class="flaticon-delete-fill"
+                    style="font-size:medium;"></i></a>
+              </td>
+            </tr> -->
+
+          {% endfor %}
+          <!--Table body-->
+        </table>
+      </div>
+      <!--Table-->
+      <!-- </form> -->
+      <br>
+    </div>
+    {% else %}
+    <div class="card-header" style="background: none;">
+      <div class="row">
+        <div class="col-xl-12 col-md-12 col-12">
+          <h2>No Course to show</h2>
+        </div>
+      </div>
+    </div>
+    {% endif %}
   </div>
 
   <script>
@@ -94,7 +213,7 @@
     // In your Javascript (external .js resource or <script> tag)
     $(document).ready(function () {
       $('.js-example-basic-single').select2();
-    });   
+    });
 
     $(window).on('pageshow', () => {
       var frm = $('#frm');
