--- a/templates/courses/editCourse.html
+++ b/templates/courses/editCourse.html
@@ -85,7 +85,7 @@ color: rgb(66, 8, 8);
 font-size: 20px;
 }
 {% endblock %}
-{% block body %}
+{% block main-content %}
 <div class="container">
   <div class="d-flex justify-content-center h-100">
     <div class="card">
